# rust_xdiff

./: Cargo.toml  README.md  deny.toml
examples/: config.rs  highlight.rs  test2.txt
fixtures/: diff1.txt  test.yml  xreq_test.yml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
src/config/: mod.rs  xdiff.rs  xreq.rs
tests/cmd/: xdiff_run_failed.md  xdiff_run_succeed.md  xreq_run_succeed.md
